update stat item link pending

--- a/src/main/resources/static/Admin/dashboard.html
+++ b/src/main/resources/static/Admin/dashboard.html
@@ -44,7 +44,7 @@
                     <!-- Stats List -->
                     <div class="stats-list">
                         
-                        <a href="allpet.html?status=Pending" class="stat-link">
+                        <a href="allpet.html?status=Pending&togglePending=true" class="stat-link">
                             <div class="stat-item">
                                 <div class="stat-number" id="stat-pending"></div>
                                 <div class="stat-label">รอพิจารณา</div>
