create logout popup & delete cookie function

--- a/src/main/resources/static/Admin/sidebar.html
+++ b/src/main/resources/static/Admin/sidebar.html
@@ -48,4 +48,18 @@
         </div>
     </aside>
 
+    <!-- Logout Popup -->
+    <div id="logout-popup" class="popup-overlay">
+        <div class="popup-content">
+            <div class="popup-icon"><span class="lsicon--circle-warning-outline"></span></div>
+            <h2 class="popup-title">Confirm Logout</h2>
+            <p class="popup-message">Are you sure you want to logout?</p>
+            <div class="popup-buttons">
+                <button class="popup-btn btn-cancel" id="btn-cancel">CANCEL</button>
+                <button class="popup-btn btn-yes" id="btn-yes">YES</button>
+            </div>
+        </div>
+    </div>
+        
+</body>
 </html>
