--- a/src/main/resources/static/Admin/requests.html
+++ b/src/main/resources/static/Admin/requests.html
@@ -27,6 +27,9 @@
                 <div class="content-wrapper">
                     <!-- Form Section -->
                     <div class="form-section">
+                        <h3 style="margin-bottom: 20px; color: #333;">ข้อมูลผู้ขอรับเลี้ยง</h3>
+                        
+                        <!-- ข้อมูลส่วนตัว -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label>ชื่อจริง</label>
@@ -52,8 +55,9 @@
                         <div class="form-group">
                             <label>อีเมล</label>
                             <input type="email" id="user-email" value="" readonly>
-                        </div><br>
+                        </div>
 
+                        <!-- ข้อมูลอาชีพและที่อยู่ -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label>อาชีพ</label>
@@ -68,16 +72,49 @@
                         <div class="form-group">
                             <label>ที่อยู่อาศัยปัจจุบัน</label>
                             <input type="text" id="user-address" value="" readonly>
-                        </div><br>
+                        </div>
 
+                        <!-- เอกสาร -->
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label>เอกสารยืนยันตัวตน</label>
+                                <div class="document-link">
+                                    <a href="#" id="identity-doc-link" target="_blank" style="color: #4A69FF; text-decoration: none;">
+                                        📄 ดาวน์โหลดเอกสาร
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label>เอกสารยืนยันที่อยู่อาศัย</label>
+                                <div class="document-link">
+                                    <a href="#" id="residence-doc-link" target="_blank" style="color: #4A69FF; text-decoration: none;">
+                                        📄 ดาวน์โหลดเอกสาร
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- ประเภทการรับสัตว์ -->
+                        <div class="form-group">
+                            <label>วิธีการรับสัตว์เลี้ยง</label>
+                            <input type="text" id="user-receive-type" value="" readonly>
+                        </div>
+
+                        <!-- ประสบการณ์และเหตุผล -->
                         <div class="form-group">
                             <label>คุณเคยเลี้ยงสัตว์เลี้ยงมาก่อนหรือไม่? ถ้าเคย โปรดเล่าประสบการณ์ของคุณ</label>
-                            <textarea id="user-pet-experience" readonly></textarea>
-                        </div><br>
+                            <textarea id="user-pet-experience" readonly rows="4"></textarea>
+                        </div>
 
                         <div class="form-group">
                             <label>ทำไมคุณถึงอยากรับสัตว์เลี้ยงตัวนี้ไว้?</label>
-                            <textarea id="user-adoption-reason" readonly></textarea>
+                            <textarea id="user-adoption-reason" readonly rows="4"></textarea>
+                        </div>
+
+                        <!-- ปุ่มอนุมัติ/ปฏิเสธ -->
+                        <div class="button-group" style="margin-top: 30px; display: flex; gap: 15px; justify-content: flex-end; padding-top: 20px; border-top: 1px solid #e0e0e0;">
+                            <button class="btn btn-reject">ปฏิเสธคำขอ</button>
+                            <button class="btn btn-approve">อนุมัติคำขอ</button>
                         </div>
                     </div>
 
@@ -86,27 +123,7 @@
                     <div class="sidebar-right">
                         <!-- Desktop view: แสดง cards ทั้งหมด -->
                         <div class="user-cards" id="userCards">
-                            <div class="user-card">
-                                <div class="user-avatar"><span class="solar--user-bold"></span></div>
-                                <div class="user-info">
-                                    <div class="user-name">UserName</div>
-                                    <div class="user-email">example@email.com</div>
-                                </div>
-                            </div>
-                            <div class="user-card">
-                                <div class="user-avatar"><span class="solar--user-bold"></span></div>
-                                <div class="user-info">
-                                    <div class="user-name">UserName</div>
-                                    <div class="user-email">example@email.com</div>
-                                </div>
-                            </div>
-                            <div class="user-card">
-                                <div class="user-avatar"><span class="solar--user-bold"></span></div>
-                                <div class="user-info">
-                                    <div class="user-name">UserName</div>
-                                    <div class="user-email"></div>
-                                </div>
-                            </div>
+                            <!-- จะถูกสร้างโดย JavaScript -->
                         </div>
 
                         <!-- Mobile view: dropdown -->
@@ -114,7 +131,7 @@
                             <div class="dropdown-selected" id="dropdownSelected">
                                 <div class="user-avatar"><span class="solar--user-bold"></span></div>
                                 <div class="user-info">
-                                    <div class="user-name"></div>
+                                    <div class="user-name">กรุณาเลือกผู้ใช้</div>
                                     <div class="user-email"></div>
                                 </div>
                                 <div class="dropdown-arrow" id="dropdownArrow"></div>
@@ -134,66 +151,70 @@
                                 <div class="pet-details-left">
                                     <div class="pet-detail-item">
                                         ชื่อ
-                                        <span id="pet-name"></span>
+                                        <span id="pet-name">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         รหัส
-                                        <span id="pet-id"></span>
+                                        <span id="pet-id">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         เพศ
-                                        <span id="pet-gender"></span>
+                                        <span id="pet-gender">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         ชนิด
-                                        <span id="pet-type"></span>
+                                        <span id="pet-type">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         สายพันธุ์
-                                        <span id="pet-breed"></span>
+                                        <span id="pet-breed">-</span>
                                     </div>
                                 </div>
                                 <div class="pet-details-right">
                                     <div class="pet-detail-item">
                                         อายุ
-                                        <span id="pet-age"></span>
+                                        <span id="pet-age">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         โรคประจำตัว
-                                        <span id="pet-disease"></span>
+                                        <span id="pet-disease">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         การทำหมัน
-                                        <span id="pet-sterilization"></span>
+                                        <span id="pet-sterilization">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         แพ้อาหาร
-                                        <span id="pet-food-allergy"></span>
+                                        <span id="pet-food-allergy">-</span>
                                     </div>
                                     <div class="pet-detail-item">
                                         การฉีดวัคซีน
-                                        <span id="pet-vaccine"></span>
+                                        <span id="pet-vaccine">-</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!--button-->
-                <div class="all-butt">
-                    <div class="button-group">
-                        <button class="btn btn-reject">ปฏิเสธคำขอ</button>
-                        <button class="btn btn-approve">อนุมัติคำขอ</button>
-                    </div>   
-                </div>  
             </div>
         </main>
     </div>
 
+    <!-- Confirmation Modal Structure (Hidden by default) -->
+    <div id="confirmation-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <h4 id="modal-title">ยืนยันการดำเนินการ</h4>
+            <p id="modal-message">คุณแน่ใจหรือไม่ว่าต้องการดำเนินการนี้?</p>
+            <div class="modal-actions">
+                <button class="btn-cancel" id="btn-modal-cancel">ยกเลิก</button>
+                <button class="btn-confirm" id="btn-modal-confirm">ยืนยัน</button>
+            </div>
+        </div>
+    </div>
+
     <script src="sidebar.js"></script>
+    <script src="breadcrumb.js"></script>
     <script src="requests.js"></script>
-    <script src="breadcrumb.js" defer></script>
 </body>
 
 </html>
